maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:33: error: type mismatch;
 found   : Unit
 required: Boolean
      if (!aMurOuest(x+1,y)){
      ^ShortestPathMaze:32: error: type mismatch;
 found   : Unit
 required: Boolean
    if (x != (getMondeHauteur()-1)){
    ^